kubernetes/clusters/main/apps/ingress/nginx/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx
  namespace: ingress
spec:
  description: Allow ingress-nginx egress to pods
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      io.kubernetes.pod.namespace: ingress
  egress:
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/nginx: allow
